Perfil e icon initial commit

--- a/perfil_utilizador/styles/sitecss.css
+++ b/perfil_utilizador/styles/sitecss.css
@@ -105,3 +105,8 @@ button#butSingOutSidebarLeft {
 footer img.img-fluid {
     width: 100px;
 }
+
+.icon {
+    max-width: 60%;
+    height: auto;
+  }
