correções barra lateral

--- a/assets/styles/dashboard.css
+++ b/assets/styles/dashboard.css
@@ -1,3 +1,22 @@
+/* CORES
+#FEBB41 : Amarelo logo
+
+*/
+#topHeader {
+    position: fixed;
+    margin-top: 0px;
+    top: 0px;
+	z-index: 999999;
+}
+
+
+.container, .container-lg, .container-md, 
+.container-sm, .container-xl, .container-xxl {
+	max-width:100% !important;
+	padding: 0px !important;
+	margin-top: 20px;
+}
+
 .icon {
     max-width: 60%;
     height: auto;
@@ -34,4 +53,78 @@
 
 .ten-percent-to-right{
 	transform: translate(10%);
+}
+
+/* Estilo para esconder e mostrar a barra lateral */
+#sideBarLeft {
+  position: fixed;
+  top: 0; 
+  left: 0;
+  width: 250px;
+  height: 100vh;
+  background-color: #333; 
+  z-index: 1050;
+  transition: transform 0.3s;
+  transform: translateX(-100%);
+  padding: 5% 0px 2% 1%;
+}
+
+#sideBarLeft.active {
+  transform: translateX(0); /* Move a barra lateral para ser visível */
+}
+
+/* Estilo para o overlay */
+#overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1040;
+}
+
+
+
+/* Botões menu top */
+#toggleSidebar {
+  background-color: black; 
+  color: white; 
+  border: none;
+  margin-right: 1vw;
+}
+
+#toggleSidebar:hover {
+  background-color: #333;
+}
+
+.loginBtn {
+    margin-left: 1vw;
+	border: none;
+    font-weight: bold;
+}
+
+#loginMenuBtn {
+    background: none;
+    color: #FEBB41;
+}
+
+#loginMenuBtn:hover {
+    background: #FEBB41;
+    color: #fff;
+}
+
+#registMenuBtn {
+    background: #000; 
+}
+
+#registMenuBtn:hover {
+    color: #FEBB41;
+}
+
+#grafEstatisticas .card,
+#infoEstatisticas .card {
+    text-align: center;
+    margin-bottom: 4vh;
 }
