--- a/assets/styles/sitecss.css
+++ b/assets/styles/sitecss.css
@@ -1,8 +1,8 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 @import url("responsive_styles.css");
 
-.bg-custom {
-    background-image: url('/../../../imgs/burger_bg_landingHomePage.png');
+.bg-custom px-4 py-4 text-left {
+    background-image: url('./../imgs/burger_bg_landingHomePage.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
