--- a/assets/styles/dashboard_beatriz.css
+++ b/assets/styles/dashboard_beatriz.css
@@ -5,7 +5,6 @@
 	font-family: "Inter", sans-serif;
 }
 
-
 hr {
     width: 100%;
     text-align: left;
@@ -13,58 +12,29 @@ hr {
     color: grey;
 }
 
-.nome_marca {
-    color: black;
-    background-color: #FEBB41;
-}
-
 p {
     text-align: justify;
 }
 
 .esquerdo {
-    float: left;
-    width: 50%;
+    flex: 75%;
 }
 
 .direito {
-    float: right;
-    width: 50%;
+    flex: 75%;
 }
 
-.centro {
-    float: left;
-    position: relative;
-    left: 10vw;
-    top:2vh
-}
-
-.sidebar {
-    position: sticky !important;
-    top: 0;
-    height: 100vh;
-    padding: 20px;
-}
-
-.perfil {
+.form_editar {
     width: 75%;
     padding: 5px;
+    /*position: relative;*/
+    /*left: 10vw;
+    top:2vh;*/
 }
 
 .cinzento {
     color: grey;
 }
-
-canvas {
-    width: 211px;
-    height: 240px;
-}
-
-.pedidos {
-    width: 100%;
-    padding-right: 10px;
-}
-
 .texto_pedido {
     color: gray;
     font-size: 14px;
