inicio de pagina de adicionar alimento

--- a/assets/styles/sitecss.css
+++ b/assets/styles/sitecss.css
@@ -10,10 +10,6 @@
     height: 500px;
 }
 
-html,body,div{
-    /* margin:0; */
-} 
-
 *{
     margin: 0;
     padding: 0;
@@ -62,8 +58,9 @@ html,body,div{
 	border-radius: 10px;
 }
 
-#menuTop .navbar-nav {
-	margin: auto;
+#menuTop {
+
+    z-index: 3;
 }
 
 #sideBarLeft {
@@ -232,9 +229,6 @@ footer img.img-fluid {
 	border-radius: 10px;
 }
 
-#menuTop .navbar-nav {
-	margin: auto;
-}
 
 #sideBarLeft {
     background: #000000;
@@ -289,7 +283,6 @@ button#butSingOutSidebarLeft {
     float: none;
 }
 
-/* Footer */
 footer {
     padding: 0px 5vw !important;
 }
@@ -301,4 +294,23 @@ footer a.nav-link:hover {
 
 footer img.img-fluid {
     width: 100px;
+}
+
+.navbar-nav .nav {
+    font-weight: bold;
+    color: black;
+    border-bottom: 7px solid #8E8E8E;
+	margin: auto;
+    z-index: 1;
+}
+
+.gray-navbar::after{
+    content: '';
+    position: absolute;
+    margin: 0;
+    bottom: 0.9vh; 
+    left: 0;
+    width: 95%;
+    border-bottom: 1vh solid #8E8E8E;
+    z-index: -1;
 }
