--- a/assets/styles/sitecss.css
+++ b/assets/styles/sitecss.css
@@ -314,3 +314,58 @@ footer img.img-fluid {
     border-bottom: 1vh solid #8E8E8E;
     z-index: -1;
 }
+
+.nav{
+    width: 9vw;
+    text-align: center;
+}
+
+
+.upload-box {
+    width: 12.5vw;
+    height: 20vh;
+    border: 3px solid ;
+    border-radius: 15px;
+    display: flex;
+    flex-wrap:wrap;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background: #cacaca;
+
+    position: relative;
+  }
+  .upload-box input[type="file"] {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    cursor: pointer;
+  }
+  .upload-box:hover {
+    border-color: #525F7F;
+    color: #525F7F;
+  }
+  .upload-box p {
+    font-size: 0.9rem;
+    margin-left: 2.5vw;
+    margin-right: 2.5vw;
+  }
+  .upload-box a {
+    color: #f0a500;
+    text-decoration: none;
+    font-weight: bold;
+  }
+  .upload-box a:hover {
+    text-decoration: underline;
+  }
+
+  .btn-xl {
+    padding: 10px 20px;
+    font-size: 20px;
+    border-radius: 10px;
+}
+
+.purple-text{
+    color: #525F7F;
+}
