--- a/assets/styles/sitecss.css
+++ b/assets/styles/sitecss.css
@@ -379,3 +379,56 @@ border-radius: 10px;
   .option-actions button {
     margin-right: 0.5rem;
   }
+
+   /* MODAL */
+
+.modal {
+  display: none; 
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(255, 255, 255, 0.3);
+  backdrop-filter: blur(1px);
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 5% auto; 
+  padding: 5px 10px 10px 10px;
+  border: 1px solid #888;
+  width: 30vw; 
+  position: relative; 
+}
+
+.close {
+  position: absolute;
+  right: 0.5vw;
+  top: 0;
+  color: #aaa;
+  font-size: 28px;
+  font-weight: bold;
+  margin-bottom: 0.5vw;
+  width: fit-content;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+input[type="text"] {
+    padding: 8px;
+    margin-bottom: 1vh;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    transition: all 0.3s ease;
+}
+
+#adicionarBtn:hover{
+    font-weight: bold;
+    color: #000000;
+    background:#bbb;
+}
