--- a/business/styles/adicionar.css
+++ b/business/styles/adicionar.css
@@ -135,3 +135,56 @@ input[type="text"] {
     color: #000000;
     background:#bbb;
 }
+
+
+.timeline {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+.timeline-step {
+  text-align: center;
+  flex: 1;
+  position: relative;
+}
+.timeline-step::before {
+  content: '';
+  position: absolute;
+  top: 15px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+  height: 2px;
+  background-color: #ffc107;
+  z-index: -1;
+}
+.timeline-step:first-child::before {
+  content: none;
+}
+.timeline-step span {
+  display: block;
+}
+.timeline-step .circle {
+  width: 30px;
+  height: 30px;
+  background-color: #ffc107;
+  border-radius: 50%;
+  margin: 0 auto 5px auto;
+}
+.timeline-step.complete .circle {
+  background-color: #343a40;
+}
+.customer-info {
+  border: 1px solid #ffc107;
+  padding: 10px;
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
+
+.table-row-even:hover{
+  background-color: #f3f3f398;
+ }
+
+.table-row-odd:hover{
+ background-color: #f3f3f398;
+}
