--- a/assets/styles/sitecss.css
+++ b/assets/styles/sitecss.css
@@ -1,16 +1,7 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 @import url("responsive_styles.css");
 
-.bg-custom px-4 py-4 text-left {
-    background-image: url('./../imgs/burger_bg_landingHomePage.png');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    width: 100%;
-    height: 500px;
-}
-
-*{
+* {
     margin: 0;
     padding: 0;
     border: 0;
@@ -21,13 +12,13 @@
 .butAcount {
     background: #FEBB41;
     border: none;
-	color: #ffffff;
+    color: #ffffff;
 }
 
-.butAcount:hover{
+.butAcount:hover {
     background: #000000;
     border: none;
-	color: #ffffff;
+    color: #ffffff;
 }
 
 .butAcount svg {
@@ -54,8 +45,8 @@
     font-weight: bold;
     color: #000000;
     margin: 10px 2%;
-	background: #FEBB41;
-	border-radius: 10px;
+    background: #FEBB41;
+    border-radius: 10px;
 }
 
 #menuTop {
@@ -68,9 +59,9 @@
     padding: 3% 0px 2% 1%;
     margin-left: calc(var(--bs-gutter-x)* .5* -1);
     color: #ffffff;
-	opacity: 0.9;
-	float: left;
-	display: flex;
+    opacity: 0.9;
+    float: left;
+    display: flex;
     width: 13.5vw;
     height: 94.6vh;
 }
@@ -93,25 +84,25 @@
 
 #sideBarLeft a.nav-link:hover {
     color: #000000;
-	background: #FEBB41;
-	border-radius: 10px;
+    background: #FEBB41;
+    border-radius: 10px;
 }
 
 #sideBarLeft span::before {
-	margin-right: 10px;
+    margin-right: 10px;
 }
 
-#sidebar{
+#sidebar {
     width: 100%;
 }
 
 #sideBarLeft ul {
-    margin-left:5ch;
+    margin-left: 5ch;
     margin-top: 6ch;
 }
 
 #sideBarLeft ul {
-    margin-left:3.5ch;
+    margin-left: 3.5ch;
     margin-top: 6ch;
 }
 
@@ -119,7 +110,7 @@
 button#butSingOutSidebarLeft {
     font-size: 1.2rem;
     background: 0;
-    border:0;
+    border: 0;
     margin: 0 1vw 3.5vh 1vw;
     font-weight: bold;
     width: 91%;
@@ -129,17 +120,18 @@ button#butSingOutSidebarLeft {
 #contentDiv {
     float: left;
     padding: 3% 2%;
-    width:80vw;
+    width: 80vw;
 
 }
 
-#sideBarLeft, #contentPage {
-	min-height: 94vh;
-	padding: 0;
+#sideBarLeft,
+#contentPage {
+    min-height: 94vh;
+    padding: 0;
 }
 
-.cleanFloat{
-	width: 100%;
+.cleanFloat {
+    width: 100%;
     float: none;
 }
 
@@ -151,39 +143,39 @@ footer img.img-fluid {
 .icon {
     max-width: 60%;
     height: auto;
-  }
-  
+}
+
 .circle {
-	width: 50px;
-	height: 50px;
-	border-radius: 50%;
-	background-color: yellow;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	font-weight: bold;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: yellow;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
 }
 
 .black-circle {
-	background-color: black;
+    background-color: black;
 }
 
 .line {
-	height: 8px;
-	background-color: yellow;
+    height: 8px;
+    background-color: yellow;
 }
 
 .gradient-line {
-	background: linear-gradient(to right, yellow, black);
-	color: white;
+    background: linear-gradient(to right, yellow, black);
+    color: white;
 }
 
-.ten-percent-to-left{
-	transform: translate(-10%);
+.ten-percent-to-left {
+    transform: translate(-10%);
 }
 
-.ten-percent-to-right{
-	transform: translate(10%);
+.ten-percent-to-right {
+    transform: translate(10%);
 }
 
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
@@ -192,13 +184,13 @@ footer img.img-fluid {
 .butAcount {
     background: #FEBB41;
     border: none;
-	color: #ffffff;
+    color: #ffffff;
 }
 
-.butAcount:hover{
+.butAcount:hover {
     background: #000000;
     border: none;
-	color: #ffffff;
+    color: #ffffff;
 }
 
 .butAcount svg {
@@ -225,8 +217,8 @@ footer img.img-fluid {
     font-weight: bold;
     color: #000000;
     margin: 10px 2%;
-	background: #FEBB41;
-	border-radius: 10px;
+    background: #FEBB41;
+    border-radius: 10px;
 }
 
 
@@ -254,12 +246,12 @@ footer img.img-fluid {
 
 #sideBarLeft a.nav-link:hover {
     color: #000000;
-	background: #FEBB41;
-	border-radius: 10px;
+    background: #FEBB41;
+    border-radius: 10px;
 }
 
 #sideBarLeft span::before {
-	margin-right: 10px;
+    margin-right: 10px;
 }
 
 
@@ -274,12 +266,14 @@ button#butSingOutSidebarLeft {
     padding: 3% 2%;
 }
 
-#contentDiv, #sideBarLeft, #contentPage {
-	min-height: 80vh;
+#contentDiv,
+#sideBarLeft,
+#contentPage {
+    min-height: 80vh;
 }
 
-.cleanFloat{
-	width: 100%;
+.cleanFloat {
+    width: 100%;
     float: none;
 }
 
