--- a/Business/assets/styles/adicionar.css
+++ b/Business/assets/styles/adicionar.css
@@ -2,8 +2,8 @@
 .navbar-nav .nav {
     font-weight: bold;
     color: black;
-    border-bottom: 7px solid #8E8E8E;
-	margin: auto;
+    border-bottom: 0.4vw solid #8E8E8E;
+	  margin: auto;
     z-index: 1;
 }
 
@@ -13,7 +13,7 @@
     margin: 0;
     bottom: 0.9vh; 
     left: 0;
-    width: 95%;
+    width: 90vw;
     border-bottom: 1vh solid #8E8E8E;
     z-index: -1;
 }
