--- a/Business/assets/styles/listapedidos.css
+++ b/Business/assets/styles/listapedidos.css
@@ -2,7 +2,7 @@
 .navbar-nav .nav {
     font-weight: bold;
     color: black;
-    border-bottom: 0.4vw solid #8E8E8E;
+    border-bottom: 1vh solid #8E8E8E;
 	  margin: auto;
     z-index: 1;
 }
